--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
      name: produtos API
   datasource:
-    url: jdbc:h2:mem:produtos   //conexão p propriedade:memoria:nomeDoBanco
-    username: bb
-    password: 2004
+    url: jdbc:h2:mem:produtos
+    username: sa
+    password: password
 
   jpa:
     database-platform: org.hibernate.dialect.H2dialect
@@ -12,3 +12,4 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
